Closed
Bug 247644
Opened 21 years ago
Closed 21 years ago
If Thunderbird has more then one profile Firefox can't be started by clicking a hyperlink
Categories
(Thunderbird :: Mail Window Front End, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Thunderbird0.8
People
(Reporter: rossa, Assigned: mscott)
References
Details
(Keywords: fixed-aviary1.0)
Attachments
(1 file)
|
887 bytes,
patch
|
benjamin
:
review+
darin.moz
:
superreview+
asa
:
approval-aviary+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7) Gecko/20040614 Firefox/0.9
Build Identifier: version 0.7 (20040616)
Hyperlinks in mail messages will not automatically open in Firefox unless
FIrefox has already been opened manually.
Reproducible: Always
Steps to Reproduce:
1. Make sure Firefox is closed.
2. Open message with hyperlink in it
3. Click on URL
Actual Results:
Nothing happens.
Expected Results:
Automatically opened Firefox and loaded the correct page.
This bug can be fixed by the following:
In explorer|Tools|folder options I deleted the HTML icon.
Then I made IE the default browser. Then I started FF and it asked if I wnated
to make it the default browser. I clicked yest browsed alnong a bit then closed
FF and rebooted.
Some users have claimned this hasn't worked for them.
Comment 1•21 years ago
|
||
I'm having this problem also. I started with 0.7 also happens in 0.7.1. It may
be somewhat related to bug http://bugzilla.mozilla.org/show_bug.cgi?id=246078
I've tried every combination of setting and unsetting either IE or FF as the
default browser I can think of, and have also dug around in the registry and the
filetype settings. Nothing seems to work. Firefox simply isn't launched when a
link is clicked. It's not that hard to open ff first, but it shouldn't have to
be done what way.
Comment 2•21 years ago
|
||
I confirm this bug for my machines under Win2k SP4 - but only in the case that
more than a single profile is defined or FF 0.9 and 0.9.1 is started with the
"-p" option. With just a single profile, the bug isn't existing. Up to now,
there is no solution for me.
Comment 3•21 years ago
|
||
I'm also seeing this with FF 0.9.1 and TB 0.7.1. I only have one FF profile, but
I have two TB profiles.
Comment 4•21 years ago
|
||
Exactly. If TB 0.7.1 has two or more profiles, FF will not start up unless an
instance is already running. And, vice versa, if FF 0.9.1 has two or more
profiles, TB will not start up at clicks on "mailto:" unless an instance of TB
is already active. If Outlook is active, then Outlook comes up - no matter what
your default mail client is.
Comment 5•21 years ago
|
||
(In reply to comment #4)
> Exactly. If TB 0.7.1 has two or more profiles, FF will not start up unless an
> instance is already running. And, vice versa, if FF 0.9.1 has two or more
> profiles, TB will not start up at clicks on "mailto:" unless an instance of TB
> is already active. If Outlook is active, then Outlook comes up - no matter what
> your default mail client is.
I can confirm this. My roommate and I each have seperate profiles in
thunderbird. I temporarily took tbird down to one profile and when I clicked a
link it did launch firefox. This is on winxp pro sp1. I wonder if this is just a
win2k-xp problem?
Comment 6•21 years ago
|
||
(In reply to comment #4)
> Exactly. If TB 0.7.1 has two or more profiles, FF will not start up unless an
> instance is already running. And, vice versa, if FF 0.9.1 has two or more
> profiles, TB will not start up at clicks on "mailto:" unless an instance of TB
> is already active. If Outlook is active, then Outlook comes up - no matter what
> your default mail client is.
I can confirm this. I have two profiles and have this problem. When one of the
profiles is removed, problem does not exist.
Confirmation. I have two profiles in TBird. When I click on a link in TBird,
Firefox does not open if I opened TBird from the Profile Manager. If I open
TBird directly, ie, without the Profile Manager by using the Don't Ask at
Startup mode, Firefox opens properly. If I delete either of the TBird profiles,
Firefox opens properly.
If Firefox is opened first, links open a new tab in Firefox as expected.
It is not a default browser issue - I have done all the suggested fixes
regarding that - Set Program Access and Defaults, regfix246978 and SetBrowser.
Links on other mail clients open Firefox properly.
Comment 8•21 years ago
|
||
I have also found that if you load thunderbird calling a specific profile by
command line, then clicking a link, that it will correctly launch firefox and
display the link. For example make a shortcut to thunderbird and put this in the
target: "C:\Program Files\Mozilla Thunderbird\thunderbird.exe" -p myprofile
replacing "myprofile" with whatever your profile is named. I found this by
accident. Would be curious to see if it fixes other's problem.
I believe this is a duplicate of Bug 221909.
Reporter (Andrew): Please check Bug 221909 and mark this bug as a duplicate if
you agree that it is (based on the comments here, I think that Bug 221909 might
need to be reopened).
Comment 10•21 years ago
|
||
The trend on Bugzilla seems to be that if a problem returns much later, then a
new bug is opened, rather than an old one reopened. Leaving this one open should
be sufficient.
I'll add that I only have one profile for each of Firefox and Thunderbird and I
still see this problem. So maybe it's a separate issue. I also noticed that this
only seems to be on the branch builds. If I use the trunk nightly then it seems
to launch Firebird correctly.
Comment 11•21 years ago
|
||
Confirming this bug because it gives more information as the other ones which I
will dupe now. It seems to be that e are on the right way now. Thanks to all
reporters here.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 12•21 years ago
|
||
*** Bug 248811 has been marked as a duplicate of this bug. ***
Comment 13•21 years ago
|
||
*** Bug 221909 has been marked as a duplicate of this bug. ***
Comment 14•21 years ago
|
||
*** Bug 257228 has been marked as a duplicate of this bug. ***
Comment 15•21 years ago
|
||
(In reply to comment #4)
> Exactly. If TB 0.7.1 has two or more profiles, FF will not start up unless an
> instance is already running. And, vice versa, if FF 0.9.1 has two or more
> profiles, TB will not start up at clicks on "mailto:" unless an instance of TB
> is already active. If Outlook is active, then Outlook comes up - no matter what
> your default mail client is.
I think this problem came up with the new integrated single profile feature. I
seems that we don't know the current profile when starting TB/FF without the -p
command line option.
Benjamin, could you take a look at this?
Summary: Hyperlinks will not open in Firefox unless firefox is already open → If Thunderbird has more then one profile Firefox can't be started by clicking a hyperlink
Comment 16•21 years ago
|
||
Darin, this is probably caused by environment variables we set during the
execv-restart process... maybe we need to clear them once we're sure we are
actually launching the app and not restarting?
| Assignee | ||
Comment 17•21 years ago
|
||
I'm giong to temporarily move this into the 0.8 blocker list in the hopes that
we get a fix for it which would be nice.
Benjamin, I don't know much about the environment variables you are setting when
the process gets restarted, but maybe this will help:
When I stepped through this in the debugger, I saw the url go through the
ShellExecute call:
LONG r = (LONG) ::ShellExecute( NULL, "open", urlSpec.get(), NULL, NULL,
SW_SHOWNORMAL);
And ShellExecute hangs, it is waiting for firefox to come up and it never does.
So we are still reaching the point where we give the URL to the operating system
so it can be opened like it was before. But when you have two profiles and
started with the profile manager, firefox can't come up.
Target Milestone: --- → Thunderbird0.8
| Assignee | ||
Comment 18•21 years ago
|
||
Benjamin, is this the environment variable you were referrring to in comment #16:
XRE_PROFILE_PATH
http://lxr.mozilla.org/mozilla/source/toolkit/xre/nsAppRunner.cpp#1394
Comment 19•21 years ago
|
||
XRE_PROFILE_PATH, XRE_START_OFFLINE, XRE_IMPORT_PROFILES are all possibly set in
various circumstances. Maybe we can clear them once we get past the EM startup code.
Comment 20•21 years ago
|
||
I just installed Firefox aviary branch 20040904 and Thunderbird branch 20040904
on Windows XP with Service Pack 2. I have made both apps the default on my
system. But the links in Thunderbird still don't open Firefox if Firefox isn't
runing allready. If it is open then the new window with link is opened.
And I also tried to run thunderbird with -profilemanager and I only have one
profile listed there but it still doesn't work. I only have Mozilla installed on
the same machine. Does it also cause a problem if in addition to 1 profile TB,
Mozilla is installed which also has only one profile?
| Assignee | ||
Comment 21•21 years ago
|
||
| Assignee | ||
Comment 22•21 years ago
|
||
Comment on attachment 158116 [details] [diff] [review]
a fix
Thanks for the environment variable pointer Benjamin. That was indeed the cause
of the problem. This patch fixes things for me by clearing those 3 variables
just before we bring up our first window.
I haven't tested the start offline case to make sure we aren't clearing that
particular flag to early in the process.
What do you think about this fix?
Attachment #158116 -
Flags: review?(bsmedberg)
Comment 23•21 years ago
|
||
Comment on attachment 158116 [details] [diff] [review]
a fix
Nice. I want darin to look at this too.
Attachment #158116 -
Flags: superreview?(darin)
Attachment #158116 -
Flags: review?(bsmedberg)
Attachment #158116 -
Flags: review+
Attachment #158116 -
Flags: approval-aviary?
Comment 24•21 years ago
|
||
Comment on attachment 158116 [details] [diff] [review]
a fix
it would be nice if everything inside that |if| block were moved into a
separate routine with a name indicating that no more restarts will occur. then
it would be more obvious in the future that this is the place to add things
like this.
one nit on the patch: please wrap the comment line to 80'ish chars ;-)
Attachment #158116 -
Flags: superreview?(darin) → superreview+
| Assignee | ||
Comment 25•21 years ago
|
||
Ok, I checked the patch in (with the shorter comment into the branch and the
trunk. I'll file a separate bug for us to break up the if clause into a new
routine. I didn't want to rock the boat and wait on fresh reviews since we
trying to get these last few PR blockers out of the way.
| Assignee | ||
Comment 26•21 years ago
|
||
can some of you that were running into this issue help verify that it's fixed in
the latest 0.8 builds? It's working for me but I would like independent
confirmation. Thanks!
Comment 27•21 years ago
|
||
Yes I can confirm. Todays build of Thunderbird version 0.8 (20040908) opens FF
when using multiple profiles within Thunderbird.
Status: RESOLVED → VERIFIED
Comment 28•21 years ago
|
||
Comment on attachment 158116 [details] [diff] [review]
a fix
a=asa for aviary checkin.
Attachment #158116 -
Flags: approval-aviary? → approval-aviary+
Comment 29•21 years ago
|
||
Yup works here too. Many thanks for fixing this!
You need to log in
before you can comment on or make changes to this bug.
Description
•