Bug #247644 --> If Thunderbird has more then one profile Firefox can't be started by clicking a hyperlink. Clear several environment variables that get set when the aviary app gets restarted.

r=bsmedberg
sr=darin